--- a/app/src/main/assets/www/views/header.html
+++ b/app/src/main/assets/www/views/header.html
@@ -19,6 +19,7 @@
     <link rel="stylesheet" href="file:///android_asset/www/public/css/reset.css" type="text/css">
     <link rel="stylesheet" href="file:///android_asset/www/public/css/font.css" type="text/css">
     <link rel="stylesheet" href="file:///android_asset/www/public/css/animation.css" type="text/css">
+    <link rel="stylesheet" href="file:///android_asset/www/public/css/preview.css" type="text/css">
     <script type="text/javascript" src="file:///android_asset/www/public/js/jquery-1.8.2.min.js"></script>
     <style>
         footer {display:block; position:fixed; bottom:0; width:100%; line-height:2.5;  color:#fff; font-size:12px; text-align:center; background-color:#333; z-index:100; opacity:0.6}
