--- a/app/src/main/assets/www/views/mobile2.html
+++ b/app/src/main/assets/www/views/mobile2.html
@@ -19,6 +19,7 @@
     <link rel="stylesheet" href="../public/css/reset.css" type="text/css">
     <link rel="stylesheet" href="../public/css/font.css" type="text/css">
     <link rel="stylesheet" href="../public/css/animation.css" type="text/css">
+    <link rel="stylesheet" href="../public/css/preview.css" type="text/css">
     <script type="text/javascript" src="../public/js/jquery-1.8.2.min.js"></script>
     <style>
         footer {display:block; position:fixed; bottom:0; width:100%; line-height:2.5;  color:#fff; font-size:12px; text-align:center; background-color:#333; z-index:100; opacity:0.6}
@@ -34,74 +35,37 @@
     <!--上下滚动 start-->
     <section class="m-page hide" >
         <div class="m-img" >
-            <div class="stage">
-
-
-                <div class="stage-content edit-area pages-img pages-img-bg" style="background: url(../public/img/bg.png);background-size: 50% 50%;background-position:cover;width:100%;height:100%;" data="600,900"><div class="symbol" style="z-index: 2;"> <div class="pages-img edit-area"><img data-name="img1" style=""  src="/mnt/sdcard/wisape/com.wisape.android/data/template/dddddddddddd/img/icon-earth.png"/ width="50" height="50"> </div> </div><div class="symbol" style="z-index: 2;"> <div class="pages-img edit-area"><img data-name="img1" style="" src="/mnt/sdcard/wisape/com.wisape.android/data/template/dddddddddddd/img/icon-earth.png"/ width="50" height="50"> </div> </div> <div class="symbol" style="z-index: 3;"> <div class="pages-txt edit-area" style="margin:70px auto;width:150px;color:#fff;text-align: center;">As c update of the classictranslation corpus, the combination of network technology and language essence </div> </div> </div>
-            </div>
+            <div class="stage-content edit-area pages-img pages-img-bg" style="background: url(../public/img/bg.png);background-size: 50% 50%;background-position:cover;width:100%;height:100%;" data="600,900"><div class="symbol" style="z-index: 2;"> <div class="pages-img edit-area"><img data-name="img1" style=""  src="/mnt/sdcard/wisape/com.wisape.android/data/template/dddddddddddd/img/icon-earth.png" width="50" height="50" /> </div> </div><div class="symbol" style="z-index: 2;"> <div class="pages-img edit-area"><img data-name="img1" style="" src="/mnt/sdcard/wisape/com.wisape.android/data/template/dddddddddddd/img/icon-earth.png" width="50" height="50" /> </div> </div> <div class="symbol" style="z-index: 3;"> <div class="pages-txt edit-area" style="margin:70px auto;width:150px;color:#fff;text-align: center;" data-animation="animated slideInDown">>As c update of the classictranslation corpus, the combination of network technology and language essence </div> </div> </div>
         </div>
     </section>
     <section class="m-page hide" >
         <div class="m-img" >
-            <div class="stage">
-
-
-                <div class="stage-content edit-area pages-img pages-img-bg" style="background: url(../public/img/bg.png);background-size: 50% 50%;background-position:cover;width:100%;height:100%;" data="600,900"><div class="symbol" style="z-index: 2;"> <div class="pages-img edit-area"><img data-name="img1" style=""  src="/mnt/sdcard/wisape/com.wisape.android/data/template/dddddddddddd/img/icon-earth.png"/ width="50" height="50"> </div> </div><div class="symbol" style="z-index: 2;"> <div class="pages-img edit-area"><img data-name="img1" style="" src="/mnt/sdcard/wisape/com.wisape.android/data/template/dddddddddddd/img/icon-earth.png"/ width="50" height="50"> </div> </div> <div class="symbol" style="z-index: 3;"> <div class="pages-txt edit-area" style="margin:70px auto;width:150px;color:#fff;text-align: center;">As c update of the classictranslation corpus, the combination of network technology and language essence </div> </div> </div>
-            </div>
+            <div class="stage-content edit-area pages-img pages-img-bg" style="background: url(../public/img/bg.png);background-size: 50% 50%;background-position:cover;width:100%;height:100%;" data="600,900"><div class="symbol" style="z-index: 2;"> <div class="pages-img edit-area"><img data-name="img1" style=""  src="/mnt/sdcard/wisape/com.wisape.android/data/template/dddddddddddd/img/icon-earth.png" width="50" height="50" /> </div> </div><div class="symbol" style="z-index: 2;"> <div class="pages-img edit-area"><img data-name="img1" style="" src="/mnt/sdcard/wisape/com.wisape.android/data/template/dddddddddddd/img/icon-earth.png" width="50" height="50" /> </div> </div> <div class="symbol" style="z-index: 3;"> <div class="pages-txt edit-area" style="margin:70px auto;width:150px;color:#fff;text-align: center;" data-animation="animated slideInDown">>As c update of the classictranslation corpus, the combination of network technology and language essence </div> </div> </div>
         </div>
     </section>
     <section class="m-page hide" >
         <div class="m-img" >
-            <div class="stage">
-
-
-                <div class="stage-content edit-area pages-img pages-img-bg" style="background: url(../public/img/bg.png);background-size: 50% 50%;background-position:cover;width:100%;height:100%;" data="600,900"><div class="symbol" style="z-index: 2;"> <div class="pages-img edit-area"><img data-name="img1" style=""  src="/mnt/sdcard/wisape/com.wisape.android/data/template/dddddddddddd/img/icon-earth.png"/ width="50" height="50"> </div> </div><div class="symbol" style="z-index: 2;"> <div class="pages-img edit-area"><img data-name="img1" style="" src="/mnt/sdcard/wisape/com.wisape.android/data/template/dddddddddddd/img/icon-earth.png"/ width="50" height="50"> </div> </div> <div class="symbol" style="z-index: 3;"> <div class="pages-txt edit-area" style="margin:70px auto;width:150px;color:#fff;text-align: center;">As c update of the classictranslation corpus, the combination of network technology and language essence </div> </div> </div>
-            </div>
+            <div class="stage-content edit-area pages-img pages-img-bg" style="background: url(../public/img/bg.png);background-size: 50% 50%;background-position:cover;width:100%;height:100%;" data="600,900"><div class="symbol" style="z-index: 2;"> <div class="pages-img edit-area"><img data-name="img1" style=""  src="/mnt/sdcard/wisape/com.wisape.android/data/template/dddddddddddd/img/icon-earth.png" width="50" height="50" /> </div> </div><div class="symbol" style="z-index: 2;"> <div class="pages-img edit-area"><img data-name="img1" style="" src="/mnt/sdcard/wisape/com.wisape.android/data/template/dddddddddddd/img/icon-earth.png" width="50" height="50" /> </div> </div> <div class="symbol" style="z-index: 3;"> <div class="pages-txt edit-area" style="margin:70px auto;width:150px;color:#fff;text-align: center;" data-animation="animated slideInDown">>As c update of the classictranslation corpus, the combination of network technology and language essence </div> </div> </div>
         </div>
     </section>
     <section class="m-page hide" >
         <div class="m-img" >
-            <div class="stage">
-
-
-                <div class="stage-content edit-area pages-img pages-img-bg" style="background: url(../public/img/bg.png);background-size: 50% 50%;background-position:cover;width:100%;height:100%;" data="600,900"><div class="symbol" style="z-index: 2;"> <div class="pages-img edit-area"><img data-name="img1" style=""  src="/mnt/sdcard/wisape/com.wisape.android/data/template/dddddddddddd/img/icon-earth.png"/ width="50" height="50"> </div> </div><div class="symbol" style="z-index: 2;"> <div class="pages-img edit-area"><img data-name="img1" style="" src="/mnt/sdcard/wisape/com.wisape.android/data/template/dddddddddddd/img/icon-earth.png"/ width="50" height="50"> </div> </div> <div class="symbol" style="z-index: 3;"> <div class="pages-txt edit-area" style="margin:70px auto;width:150px;color:#fff;text-align: center;">As c update of the classictranslation corpus, the combination of network technology and language essence </div> </div> </div>
-            </div>
+            <div class="stage-content edit-area pages-img pages-img-bg" style="background: url(../public/img/bg.png);background-size: 50% 50%;background-position:cover;width:100%;height:100%;" data="600,900"><div class="symbol" style="z-index: 2;"> <div class="pages-img edit-area"><img data-name="img1" style=""  src="/mnt/sdcard/wisape/com.wisape.android/data/template/dddddddddddd/img/icon-earth.png" width="50" height="50" /> </div> </div><div class="symbol" style="z-index: 2;"> <div class="pages-img edit-area"><img data-name="img1" style="" src="/mnt/sdcard/wisape/com.wisape.android/data/template/dddddddddddd/img/icon-earth.png" width="50" height="50" /> </div> </div> <div class="symbol" style="z-index: 3;"> <div class="pages-txt edit-area" style="margin:70px auto;width:150px;color:#fff;text-align: center;" data-animation="animated slideInDown">>As c update of the classictranslation corpus, the combination of network technology and language essence </div> </div> </div>
         </div>
     </section>
     <section class="m-page hide" >
         <div class="m-img" >
-            <div class="stage">
-
-
-                <div class="stage-content edit-area pages-img pages-img-bg" style="background: url(../public/img/bg.png);background-size: 50% 50%;background-position:cover;width:100%;height:100%;" data="600,900"><div class="symbol" style="z-index: 2;"> <div class="pages-img edit-area"><img data-name="img1" style=""  src="/mnt/sdcard/wisape/com.wisape.android/data/template/dddddddddddd/img/icon-earth.png"/ width="50" height="50"> </div> </div><div class="symbol" style="z-index: 2;"> <div class="pages-img edit-area"><img data-name="img1" style="" src="/mnt/sdcard/wisape/com.wisape.android/data/template/dddddddddddd/img/icon-earth.png"/ width="50" height="50"> </div> </div> <div class="symbol" style="z-index: 3;"> <div class="pages-txt edit-area" style="margin:70px auto;width:150px;color:#fff;text-align: center;">As c update of the classictranslation corpus, the combination of network technology and language essence </div> </div> </div>
-            </div>
+            <div class="stage-content edit-area pages-img pages-img-bg" style="background: url(../public/img/bg.png);background-size: 50% 50%;background-position:cover;width:100%;height:100%;" data="600,900"><div class="symbol" style="z-index: 2;"> <div class="pages-img edit-area"><img data-name="img1" style=""  src="/mnt/sdcard/wisape/com.wisape.android/data/template/dddddddddddd/img/icon-earth.png" width="50" height="50" /> </div> </div><div class="symbol" style="z-index: 2;"> <div class="pages-img edit-area"><img data-name="img1" style="" src="/mnt/sdcard/wisape/com.wisape.android/data/template/dddddddddddd/img/icon-earth.png" width="50" height="50" /> </div> </div> <div class="symbol" style="z-index: 3;"> <div class="pages-txt edit-area" style="margin:70px auto;width:150px;color:#fff;text-align: center;" data-animation="animated slideInDown">>As c update of the classictranslation corpus, the combination of network technology and language essence </div> </div> </div>
         </div>
     </section>
     <section class="m-page hide" >
         <div class="m-img" >
-            <div class="stage">
-
-
-                <div class="stage-content edit-area pages-img pages-img-bg" style="background: url(../public/img/bg.png);background-size: 50% 50%;background-position:cover;width:100%;height:100%;" data="600,900"><div class="symbol" style="z-index: 2;"> <div class="pages-img edit-area"><img data-name="img1" style=""  src="/mnt/sdcard/wisape/com.wisape.android/data/template/dddddddddddd/img/icon-earth.png"/ width="50" height="50"> </div> </div><div class="symbol" style="z-index: 2;"> <div class="pages-img edit-area"><img data-name="img1" style="" src="/mnt/sdcard/wisape/com.wisape.android/data/template/dddddddddddd/img/icon-earth.png"/ width="50" height="50"> </div> </div> <div class="symbol" style="z-index: 3;"> <div class="pages-txt edit-area" style="margin:70px auto;width:150px;color:#fff;text-align: center;">As c update of the classictranslation corpus, the combination of network technology and language essence </div> </div> </div>
-            </div>
+            <div class="stage-content edit-area pages-img pages-img-bg" style="background: url(../public/img/bg.png);background-size: 50% 50%;background-position:cover;width:100%;height:100%;" data="600,900"><div class="symbol" style="z-index: 2;"> <div class="pages-img edit-area"><img data-name="img1" style=""  src="/mnt/sdcard/wisape/com.wisape.android/data/template/dddddddddddd/img/icon-earth.png" width="50" height="50" /> </div> </div><div class="symbol" style="z-index: 2;"> <div class="pages-img edit-area"><img data-name="img1" style="" src="/mnt/sdcard/wisape/com.wisape.android/data/template/dddddddddddd/img/icon-earth.png" width="50" height="50" /> </div> </div> <div class="symbol" style="z-index: 3;"> <div class="pages-txt edit-area" style="margin:70px auto;width:150px;color:#fff;text-align: center;" data-animation="animated slideInDown">>As c update of the classictranslation corpus, the combination of network technology and language essence </div> </div> </div>
         </div>
     </section>
     <section class="m-page hide" >
         <div class="m-img" >
-            <div class="stage">
-
-
-                <div class="stage-content edit-area pages-img pages-img-bg" style="background: url(../public/img/bg.png);background-size: 50% 50%;background-position:cover;width:100%;height:100%;" data="600,900"><div class="symbol" style="z-index: 2;"> <div class="pages-img edit-area"><img data-name="img1" style=""  src="/mnt/sdcard/wisape/com.wisape.android/data/template/dddddddddddd/img/icon-earth.png"/ width="50" height="50"> </div> </div><div class="symbol" style="z-index: 2;"> <div class="pages-img edit-area"><img data-name="img1" style="" src="/mnt/sdcard/wisape/com.wisape.android/data/template/dddddddddddd/img/icon-earth.png"/ width="50" height="50"> </div> </div> <div class="symbol" style="z-index: 3;"> <div class="pages-txt edit-area" style="margin:70px auto;width:150px;color:#fff;text-align: center;">As c update of the classictranslation corpus, the combination of network technology and language essence </div> </div> </div>
-            </div>
-        </div>
-    </section>
-    <section class="m-page hide" >
-        <div class="m-img" >
-            <div class="stage">
-
-
-                <div class="stage-content edit-area pages-img pages-img-bg" style="background: url(../public/img/bg.png);background-size: 50% 50%;background-position:cover;width:100%;height:100%;" data="600,900"><div class="symbol" style="z-index: 2;"> <div class="pages-img edit-area"><img data-name="img1" style=""  src="/mnt/sdcard/wisape/com.wisape.android/data/template/dddddddddddd/img/icon-earth.png"/ width="50" height="50"> </div> </div><div class="symbol" style="z-index: 2;"> <div class="pages-img edit-area"><img data-name="img1" style="" src="/mnt/sdcard/wisape/com.wisape.android/data/template/dddddddddddd/img/icon-earth.png"/ width="50" height="50"> </div> </div> <div class="symbol" style="z-index: 3;"> <div class="pages-txt edit-area" style="margin:70px auto;width:150px;color:#fff;text-align: center;">As c update of the classictranslation corpus, the combination of network technology and language essence </div> </div> </div>
-            </div>
+            <div class="stage-content edit-area pages-img pages-img-bg" style="background: url(../public/img/bg.png);background-size: 50% 50%;background-position:cover;width:100%;height:100%;" data="600,900"><div class="symbol" style="z-index: 2;"> <div class="pages-img edit-area"><img data-name="img1" style=""  src="/mnt/sdcard/wisape/com.wisape.android/data/template/dddddddddddd/img/icon-earth.png" width="50" height="50" /> </div> </div><div class="symbol" style="z-index: 2;"> <div class="pages-img edit-area"><img data-name="img1" style="" src="/mnt/sdcard/wisape/com.wisape.android/data/template/dddddddddddd/img/icon-earth.png" width="50" height="50" /> </div> </div> <div class="symbol" style="z-index: 3;"> <div class="pages-txt edit-area" style="margin:70px auto;width:150px;color:#fff;text-align: center;" data-animation="animated slideInDown">>As c update of the classictranslation corpus, the combination of network technology and language essence </div> </div> </div>
         </div>
     </section>
 
@@ -114,14 +78,11 @@
     <audio loop="loop" src="images/mymusic.mp3" id="media" preload="preload"></audio>
 </div>
 
-<div id="prBack" style="width:100px;height:100px;background: red;float:left;position: fixed;left:0;top:0;color:#fff;z-index: 999">
-    back
+<div id="prBack" class="icon-arrow-left-cirle" style="position: fixed;left:10px;top:20px;z-index: 999">
 </div>
-<div id="prEdit" style="width:100px;height:100px;background: red;float:right;position: fixed;right:0;top:0;color:#fff;z-index: 999">
-    edit
+<div id="prEdit" class="icon-pencil-circle" style="position: fixed;right:10px;top:20px;z-index: 999">
 </div>
-<div id="publish" style="width:100px;height:100px;background: red;float:right;position: fixed;right:0;top:100px;color:#fff;z-index: 999">
-    publish
+<div id="publish" class="icon-publish-circle" style="position: fixed;right:10px;bottom:20px;z-index: 999">
 </div>
 <script>
     var lanren = {
