--- a/app/src/main/assets/www/views/footer.html
+++ b/app/src/main/assets/www/views/footer.html
@@ -1,11 +1,8 @@
-<div id="prBack" style="width:100px;height:100px;background: red;float:left;position: fixed;left:0;top:0;color:#fff;z-index: 999">
-    back
+<div id="prBack" class="icon-arrow-left-cirle" style="position: fixed;left:10px;top:20px;z-index: 999">
 </div>
-<div id="prEdit" style="width:100px;height:100px;background: red;float:right;position: fixed;right:0;top:0;color:#fff;z-index: 999">
-    edit
+<div id="prEdit" class="icon-pencil-circle" style="position: fixed;right:10px;top:20px;z-index: 999">
 </div>
-<div id="publish" style="width:100px;height:100px;background: red;float:right;position: fixed;right:0;top:100px;color:#fff;z-index: 999">
-    publish
+<div id="publish" class="icon-publish-circle" style="position: fixed;right:10px;bottom:20px;z-index: 999">
 </div>
 
 <script src="file:///android_asset/www/public/js/cordova.js"></script>
