--- a/app/src/main/assets/www/views/test.html
+++ b/app/src/main/assets/www/views/test.html
@@ -17,6 +17,7 @@
     <link rel="stylesheet" href="../public/css/reset.css" type="text/css">
     <link rel="stylesheet" href="../public/css/font.css" type="text/css">
     <link rel="stylesheet" href="../public/css/animation.css" type="text/css">
+    <link rel="stylesheet" href="../public/css/preview.css" type="text/css">
     <script type="text/javascript" src="../public/js/jquery-1.8.2.min.js"></script>
     <style>        footer {
         display: block;
@@ -39,105 +40,49 @@
 </head>
 <body>
 <div class="p-index main" id="con">
-    <section class="m-page hide">
+    <section class="m-page hide pages-item">
         <div class="m-img">
             <div class="stage-content edit-area pages-img pages-img-bg"
-                 style="background: url(./img/bg.jpg);background-position: 100% 100%;background-size:cover;width:100%;height:100%;"
-                 data="600,900">
-                <div class="symbol" style="z-index: 2;">
-                    <div class="pages-img edit-area"><img data-name="img1" style=""
-                                                          src="./img/icon-earth.png"/
-                        width="50" height="50">
+                 style="background: url(/mnt/sdcard/wisape/com.wisape.android/data/template/tpl1/img/bg.jpg);background-size: cover;background-position:100% 100%;width:100%;height:100%;">
+                <div class="symbol">
+                    <div class="pages-img edit-area"><img data-name="img1" style="" width="50" height="50"
+                                                          src="/mnt/sdcard/wisape/com.wisape.android/data/template/tpl1/img/icon-earth.png"/>
                     </div>
                 </div>
-                <div class="symbol" style="z-index: 2;">
-                    <div class="pages-img edit-area"><img data-name="img1" style=""
-                                                          src="./img/icon-earth.png"/
-                        width="50" height="50">
+                <div class="symbol" style="background:green;">
+                    <div class="pages-img edit-area"><img data-name="img1" style="" width="50" height="50"
+                                                          src="/mnt/sdcard/wisape/com.wisape.android/data/template/tpl1/img/icon-earth.png"/>
                     </div>
                 </div>
                 <div class="symbol" style="z-index: 3;">
                     <div class="pages-txt edit-area"
-                         style="margin:70px auto;width:150px;color:#fff;text-align: center;">As c update of the
-                        classictranslation corpus, the combination of network technology and language essence
+                         style="margin:70px auto;width:150px;color:#fff;text-align: center;">asdfasdasfadsfasdf As c
+                        update of the classictranslation corpus, the combination of network technology and language
+                        essence
                     </div>
                 </div>
             </div>
         </div>
     </section>
-    <section class="m-page hide">
+    <section class="m-page hide pages-item">
         <div class="m-img">
             <div class="stage-content edit-area pages-img pages-img-bg"
-                 style="background: url(./img/bg.jpg);background-size: 50% 50%;background-position:cover;width:100%;height:100%;"
-                 data="600,900">
-                <div class="symbol" style="z-index: 2;">
-                    <div class="pages-img edit-area"><img data-name="img1" style=""
-                                                          src="./img/icon-earth.png"/
-                        width="50" height="50">
+                 style="background: url(/mnt/sdcard/wisape/com.wisape.android/data/template/tpl1/img/bg.jpg);background-size: cover;background-position:100% 100%;width:100%;height:100%;">
+                <div class="symbol">
+                    <div class="pages-img edit-area"><img data-name="img1" style="" width="50" height="50"
+                                                          src="/mnt/sdcard/wisape/com.wisape.android/data/template/tpl1/img/icon-earth.png"/>
                     </div>
                 </div>
-                <div class="symbol" style="z-index: 2;">
-                    <div class="pages-img edit-area"><img data-name="img1" style=""
-                                                          src="./img/icon-earth.png"/
-                        width="50" height="50">
+                <div class="symbol" style="background:green;">
+                    <div class="pages-img edit-area"><img data-name="img1" style="" width="50" height="50"
+                                                          src="/mnt/sdcard/wisape/com.wisape.android/data/template/tpl1/img/icon-earth.png"/>
                     </div>
                 </div>
                 <div class="symbol" style="z-index: 3;">
                     <div class="pages-txt edit-area"
-                         style="margin:70px auto;width:150px;color:#fff;text-align: center;">As c update of the
-                        classictranslation corpus, the combination of network technology and language essence
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section>
-    <section class="m-page hide">
-        <div class="m-img">
-            <div class="stage-content edit-area pages-img pages-img-bg"
-                 style="background: url(./img/bg.jpg);background-size: 50% 50%;background-position:cover;width:100%;height:100%;"
-                 data="600,900">
-                <div class="symbol" style="z-index: 2;">
-                    <div class="pages-img edit-area"><img data-name="img1" style=""
-                                                          src="./img/icon-earth.png"/
-                        width="50" height="50">
-                    </div>
-                </div>
-                <div class="symbol" style="z-index: 2;">
-                    <div class="pages-img edit-area"><img data-name="img1" style=""
-                                                          src="./img/icon-earth.png"/
-                        width="50" height="50">
-                    </div>
-                </div>
-                <div class="symbol" style="z-index: 3;">
-                    <div class="pages-txt edit-area"
-                         style="margin:70px auto;width:150px;color:#fff;text-align: center;">As c update of the
-                        classictranslation corpus, the combination of network technology and language essence
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section>
-    <section class="m-page hide">
-        <div class="m-img">
-            <div class="stage-content edit-area pages-img pages-img-bg"
-                 style="background: url(./img/bg.jpg);background-size: 50% 50%;background-position:cover;width:100%;height:100%;"
-                 data="600,900">
-                <div class="symbol" style="z-index: 2;">
-                    <div class="pages-img edit-area"><img data-name="img1" style=""
-                                                          src="./img/icon-earth.png"/
-                        width="50" height="50">
-                    </div>
-                </div>
-                <div class="symbol" style="z-index: 2;">
-                    <div class="pages-img edit-area"><img data-name="img1" style=""
-                                                          src="./img/icon-earth.png"/
-                        width="50" height="50">
-                    </div>
-                </div>
-                <div class="symbol" style="z-index: 3;">
-                    <div class="pages-txt edit-area"
-                         style="margin:70px auto;width:150px;color:#fff;text-align: center;">As c update of the
-                        classictranslation corpus, the combination of network technology and language essence
+                         style="margin:70px auto;width:150px;color:#fff;text-align: center;">asdfasdasfadsfasdf As c
+                        update of the classictranslation corpus, the combination of network technology and language
+                        essence
                     </div>
                 </div>
             </div>
@@ -146,28 +91,15 @@
     <section class="u-arrow"><img src="../public/img/btn01_arrow.png"/></section>
 </div>
 <div id="audio-btn" class="on">
-    <audio loop="loop" src="null" id="media" preload="preload"></audio>
+    <audio loop="loop" src="bensound-anewbeginning.mp3" id="media"
+           preload="preload"></audio>
 </div>
-<div id="prBack"
-     style="width:100px;height:100px;background: red;float:left;position: fixed;left:0;top:0;color:#fff;z-index: 999">
-    back
-</div>
-<div id="prEdit"
-     style="width:100px;height:100px;background: red;float:right;position: fixed;right:0;top:0;color:#fff;z-index: 999">
-    edit
-</div>
-<div id="publish"
-     style="width:100px;height:100px;background: red;float:right;position: fixed;right:0;top:100px;color:#fff;z-index: 999">
-    publish
-</div>
+<div id="prBack" class="icon-arrow-left-cirle" style="position: fixed;left:10px;top:20px;z-index: 999"></div>
+<div id="prEdit" class="icon-pencil-circle" style="position: fixed;right:10px;top:20px;z-index: 999"></div>
+<div id="publish" class="icon-publish-circle" style="position: fixed;right:10px;bottom:20px;z-index: 999"></div>
 <script src="../public/js/cordova.js"></script>
-<script type="text/javascript">    $(function () {
-    $("#prBack").click(function () {
-        console.info("prBack");
-        cordova.exec(function (retval) {
-               //alert(retval);                showMessage(retval);            }, function(e) {                //alert("Error: "+e);            }, "StoryTemplate", "back", []);        });        $("#prEdit").click(function(){            console.info("prEdit");            cordova.exec(function(retval) {                //alert(retval);                //showMessage(retval);            }, function(e) {                //alert("Error: "+e);            }, "StoryTemplate", "edit",[]);        });        $("#publish").click(function(){            console.info("#publish");            var retHtml = '<div  class="p-index main" id="con">',retImg = [], $con= $("#con");            retHtml += $con.html();            retHtml += '</div>';            $con.find(".pages-img").each(function(){                var me = $(this);                if(me.hasClass("pages-img-bg")) {                    retImg.push(me.css("background-image").split("url(")[1].split(")")[0]);                } else {                    retImg.push(me.find("img").attr("src"));                }            });            cordova.exec(function(retval) {               //alert(retval);                //showMessage(retval);            }, function(e) {                //alert("Error: "+e);            }, "StoryTemplate", "publish", [retHtml,retImg]);        })    })</script>
-<script>
-    var lanren = {
+<script src="../public/js/preview.js"></script>
+<script>    var lanren = {
     changeClass: function (target, id) {
         var className = $(target).attr('class');
         var ids = document.getElementById(id);
@@ -182,8 +114,7 @@ $(function () {
     $("#audio-btn").click(function () {
         lanren.changeClass(this, 'media')
     });
-})
-<!--代码部分end--></script>
+})</script>
 <script type="text/javascript" src="../public/js/jquery.easing.1.3.js"></script>
 <script type="text/javascript" src="../public/js/page_scroll_bx.js"></script>
 </body>
