--- a/app/src/main/assets/www/public/css/mod1.css
+++ b/app/src/main/assets/www/public/css/mod1.css
@@ -433,3 +433,6 @@ left:50%;margin-left:-15px;-webkit-animation: move2 2s infinite;}
 	background-size: 100px 50px;
 	background-position: 0px 0px;
 }
+
+ footer {display:block; position:fixed; bottom:0; width:100%; line-height:2.5;  color:#fff; font-size:12px; text-align:center; background-color:#333; z-index:100; opacity:0.6}
+footer a { color:white; }
