--- a/app/src/main/res/layout/activity_story_release.xml
+++ b/app/src/main/res/layout/activity_story_release.xml
@@ -57,8 +57,7 @@
             <ImageView
                 android:id="@+id/story_settings_cover_sdv"
                 android:layout_width="80dp"
-                android:layout_height="80dp"
-                android:background="@drawable/default_user_icon" />
+                android:layout_height="80dp" />
 
             <ImageView
                 android:layout_width="wrap_content"
